# MServer

./: .gitignore  CMakeLists.txt  MServer.sln  server.mdj
LoginServer/: LoginServer.vcxproj
backup/: GatewayServer.setting  MiniClient.setting
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/src/GatewayServer/: Makefile  cmake_install.cmake
cmake/src/MiniClient/: Makefile  cmake_install.cmake
cmake/src/NetWork/: Makefile  cmake_install.cmake
cmake/src/ServerBase/: Makefile  cmake_install.cmake
msvc/: MServer.sln
msvc/projects/GatewayServer/: GatewayServer.vcxproj  GatewayServer.vcxproj.filters
src/GameServer/: GameServer.vcxproj  GameServer.vcxproj.filters
src/GatewayServer/: CMakeLists.txt  GatewayApp.cpp  GatewayApp.h  GatewayServer.vcxproj  GatewayServer.vcxproj.filters  ReadMe.txt  main.cpp
src/MiniClient/: CMakeLists.txt  MiniClient.cpp  MiniClient.h  MiniClient.vcxproj  MiniClient.vcxproj.filters  main.cpp
src/NetWork/: AsioClientApp.cpp  AsioClientApp.h  AsioServerApp.cpp  AsioServerApp.h  AsioTcpConnection.cpp  AsioTcpConnection.h  CMakeLists.txt  IClient.cpp  IClient.h  IServer.cpp  IServer.h  NetMessage.h  NetWork.vcxproj  NetWork.vcxproj.filters  TCPAcceptor.cpp  TCPAcceptor.h  TypeDefines.h
src/ServerBase/: AsioClientApp.cpp  AsioClientApp.h  AsioServerApp.cpp  AsioServerApp.h  AsioTcpConnection.cpp  AsioTcpConnection.h  AutoLocker.h  CMakeLists.txt  CircleDeque.h  IAsioApp.h  IClient.cpp  IClient.h  IServer.cpp  IServer.h  MemoryPool.h  MessageQueue.cpp  MessageQueue.h  NetMessage.cpp  NetMessage.h  Obj.h  ServerBase.vcxproj  ServerBase.vcxproj.filters  TypeDefines.h  includes.h
(+16 files in other folders)
